# aegis

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/aegis/: __init__.py  _migration.py  client.py  database.py  definition.py  models.py  utils.py  worker.py
tests/: conftest.py  test_models.py
tests/integration/: test_activity_retry.py  test_client.py  test_database.py  test_idempotency.py  test_recovery.py  test_timeout.py  test_wait_for_result.py  test_workflow_execution.py
tests/unit/: test_definition.py  test_utils.py  test_worker.py
