[project]
name = "aegis"
version = "0.1.0"
description = "Lightweight durable execution library for Python"
readme = "README.md"
authors = [{ email = "hoang.minh.quan@sun-asterisk.com" }]
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.1.0b1",
    "pydantic>=2.0.0",
    "typer>=0.24.1",
    "psycopg[binary,pool]>=3.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "dbos>=2.17.0",
    "fastapi[standard]>=0.135.3",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.1.0",
]
